<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_add_stock"
        android:title="@string/menu_add_stock"
        android:icon="@android:drawable/ic_menu_add" />

    <item
        android:id="@+id/nav_sales"
        android:title="@string/menu_sales"
        android:icon="@android:drawable/ic_menu_gallery" />

    <item
        android:id="@+id/nav_purchase"
        android:title="@string/menu_purchase"
        android:icon="@android:drawable/ic_menu_edit" />

    <item
        android:id="@+id/nav_search_stock"
        android:title="@string/menu_search_stock"
        android:icon="@android:drawable/ic_menu_search" />

    <item
        android:id="@+id/nav_list_stock"
        android:title="@string/menu_list_stock"
        android:icon="@android:drawable/ic_menu_sort_by_size" />

    <item
        android:id="@+id/nav_log_out"
        android:title="@string/menu_log_out"
        android:icon="@android:drawable/ic_lock_power_off" />
</menu>
