<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".AddStockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddStockFragment">

        <!-- Item Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemNameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_itemNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Qty In Stock -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/qtyTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qty_stock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_qtyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Price -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Returnable, NonReturnable RadioGroup -->
        <RadioGroup
            android:id="@+id/returnableRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/returnableRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returnable"
                style="@style/CustomRadioButtonStyle"
                />

            <RadioButton
                android:id="@+id/nonReturnableRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nonReturnable"
                style="@style/CustomRadioButtonStyle"
                />
        </RadioGroup>

        <!-- Save and Cancel Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginStart="16dp"
                android:layout_gravity="center" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
