<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".PurchaseFragment">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".PurchaseFragment">

            <!-- Item Code -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemCodeTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_itemCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Qty Purchased -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/qtyPurchasedTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qty_purchased">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_qtyPurchasedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date of Purchase -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/purchase_dateTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_purchase_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_purchase_dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Submit and Cancel Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>






</FrameLayout>