<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchStockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SearchFragment">

        <!-- Item Code -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemCodeTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_code_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_itemCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Submit and Cancel Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchButtonItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginStart="16dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/noDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noDataFound"
            android:visibility="gone"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/detailsLayout"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <!-- Item Code TextView -->
            <TextView
                android:id="@+id/itemCodeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Item Name TextView -->
            <TextView
                android:id="@+id/itemNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Quantity in Stock TextView -->
            <TextView
                android:id="@+id/qtyStockTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Price TextView -->
            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>